# classical-ml-from-scratch

./: .gitignore  README.md  bench_vs_sklearn.py  pyproject.toml
data/: README.md  sample_moons.csv
docs/: api.md
examples/: compare_classifiers.py  custom_estimator.py  quickstart.py
notebooks/: demo.ipynb
results/: metrics.json
scripts/: demo.py  download_data.py  generate_sample.py  make_gallery.py
src/classml/: __init__.py  base.py  decision_tree.py  gmm.py  kmeans.py  knn.py  linear_regression.py  logistic_regression.py  naive_bayes.py  pca.py  svm.py
tests/: test_decision_tree.py  test_gmm.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_naive_bayes.py  test_pca.py  test_svm.py
